skeplib/tests/fixtures/sema/invalid/match_wildcard_not_last.sk
fn main() -> Int {
  match (1) {
    _ => { return 1; }
    1 => { return 2; }
  }
}
